modules/gdscript/tests/scripts/analyzer/errors/setter_with_too_few_args.gd
var a: int: set = set_named

func test():
	pass

func set_named() -> void:
	prints("set_named")
